--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Symphony SMS SDK Renderer Node",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha ./test"
   },
   "repository": {
     "type": "git",
@@ -17,8 +17,9 @@
   },
   "homepage": "https://github.com/vinnie777/sms-sdk-renderer-node#readme",
   "dependencies": {
+    "browserify-fs": "^1.0.0",
     "handlebars": "^4.1.2",
-    "browserify-fs": "^1.0.0"
+    "handlebars-helpers": "^0.10.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
