--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   },
   "homepage": "https://github.com/vinnie777/sms-sdk-renderer-node#readme",
   "dependencies": {
-    "handlebars": "^4.1.2",
-    "browserify-fs": "^1.0.0"
+    "handlebars": "^4.5.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
