--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "sms-sdk-renderer-node",
   "version": "1.0.13",
   "description": "Symphony SMS SDK Renderer Node",
-  "main": "index.js",
+  "main": "dist/main.js",
+  "source": "src/index.js",
+  "module": "dist/index.js",
   "scripts": {
-    "test": "mocha ./test"
+    "test": "mocha ./test",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -23,6 +26,9 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^6.1.4"
+    "mocha": "^6.1.4",
+    "raw-loader": "^4.0.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10"
   }
 }
