--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "raw-loader": "^4.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
+  },
+  "resolutions": {
+    "autolinker": "3.14.0",
+    "bl": "4.0.3"
   }
 }
